--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ellipsis-gsheets",
-  "version": "0.0.1",
+  "version": "0.0.1-beta.0",
   "description": "Ellipsis Google Sheets support",
   "main": "dist/index.js",
   "scripts": {
