--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "tsc": "./node_modules/.bin/tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublish": "./node_modules/.bin/tsc"
+    "prepare": "./node_modules/.bin/tsc"
   },
   "repository": {
     "type": "git",
